[metadata]
name = Line_sizing
version = 0.0.1
author = Pratik Wikhe
author_email = pratikwikhe@gmail.com
description = For line sizing calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Carbonn14/Line_sizing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True